fixing documentation swagger
